[package]
name = "workflows-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
kube = { version = "0.91.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
schemars = {version="0.8.20", features=["chrono"] }
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
actix-web = "4.6.0"
futures = "0.3.30"
tokio = {version="1.37.0", features=["macros", "rt-multi-thread"] }
serde_yaml = "0.9.34"
prometheus = "0.13.4"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.20.0"
opentelemetry = {version="0.20.0", features=["trace", "rt-tokio"] }
opentelemetry-otlp = "0.16.0"
tonic = "0.11.0"
thiserror = "1.0.61"
anyhow = "1.0.86"
cel-interpreter = "0.7.0"
